Refactoring for junit 5.  rxutils to Java 11